# DocProcessor

./: .env_sample  .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.sh
backend/: .env_example  manage.py  pyproject.toml
backend/docprocessor/: asgi.py  celery.py  settings.py  wsgi.py
backend/processor/: admin.py  api.py  models.py  permissions.py  processor.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py
backend/processor/migrations/: 0001_initial.py
docker/: Dockerfile  Dockerfile.frontend  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh
docprocessor/: settings.py  urls.py
frontend/: .env_example  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  useImportJob.ts  useImportJobSWR.ts
processor/: admin.py  api.py  models.py  processor.py  serializers.py  services.py  tasks.py  tests.py  urls.py
processor/migrations/: 0001_initial.py
